added notebook header and preprocessing details

--- a/checkpoint2/checkpoint2.ipynb
+++ b/checkpoint2/checkpoint2.ipynb
@@ -4,19 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Checkpoint 2 Notebook\n",
+    "# Checkpoint 2: Vocalization Feature Analysis/EDA for Non-Verbal Communication\n",
     "\n",
-    "__TODO__:\n",
-    "- write details for each cell and test\n",
-    "- ~~preprocess: create preprocessing pipeline, store all code into script, then run script to preprocess all data and store into pickle~~\n",
-    "- analysis: need \"3 hypothesis tests\" to validate hypotheses - 2 done"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Preprocessing"
+    "This notebook supports our broader project goal of developing techniques to detect and classify non-verbal vocalizations from autistic individuals.\n",
+    "\n",
+    "Specifically, this notebook focuses on:\n",
+    "\n",
+    "- Extracting acoustic features (e.g., pitch, MFCCs, spectrograms) from labeled vocal samples\n",
+    "- Running statistical hypothesis tests to assess whether these features meaningfully differ across expressive intent labels (e.g., \"yes\" vs. \"no\", \"frustrated\" vs. \"delighted\")\n",
+    "- Guiding downstream model development by identifying discriminative features that could improve classification performance\n",
+    "\n",
+    "The insights gained here help inform which audio characteristics are most relevant for modeling and how they correlate with the communicative intent behind each vocalization.\n"
    ]
   },
   {
@@ -41,6 +39,66 @@
     "import seaborn as sns\n",
     "import json\n",
     "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing Overview\n",
+    "\n",
+    "Before conducting any analysis or modeling, we perform a series of preprocessing steps to ensure all audio data is clean, standardized, and feature-rich. The goal is to prepare vocalization data from non-verbal individuals in a format suitable for feature extraction and machine learning workflows.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 1. Audio Cleaning\n",
+    "Raw audio signals are passed through a customizable cleaning pipeline that includes:\n",
+    "\n",
+    "- **Normalization** – Scales amplitude values to a consistent range.\n",
+    "- **Noise Reduction** – Uses spectral gating to remove background noise.\n",
+    "- **Silence Removal** – Removes low-energy segments using a dB threshold and frame-based segmentation.\n",
+    "- **High-pass Filtering** – Reduces low-frequency hum and background noise.\n",
+    "\n",
+    "Optionally, the pipeline can **save both original and cleaned audio** for manual inspection.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 2. File Renaming & Metadata Generation\n",
+    "Audio files are renamed using a consistent format:  \n",
+    "`<Participant>_<Label>_<Index>.wav`  \n",
+    "This enables easier traceability and lookup. The updated metadata is saved to a new CSV for downstream use.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 3. Feature Extraction – Mel Spectrograms\n",
+    "Each cleaned audio waveform is converted into a **Mel spectrogram** (a time–frequency representation). We ensure consistency across samples by:\n",
+    "\n",
+    "- Using a fixed number of **Mel bands** (default: 128)\n",
+    "- **Normalizing** each spectrogram using either:\n",
+    "  - **Sample-level statistics** (mean/std or min/max per sample), or  \n",
+    "  - **Global dataset statistics** (computed and optionally saved)\n",
+    "- **Padding or cropping** spectrograms to a fixed temporal length for modeling\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 4. Final Dataset Output\n",
+    "The resulting dataset includes:\n",
+    "\n",
+    "- Cleaned waveform (`Audio`)\n",
+    "- Metadata (`Label`, `Participant ID`, `Filename`, etc.)\n",
+    "- Normalized spectrogram (`Spectrogram`)\n",
+    "\n",
+    "This processed data is returned as a **Polars DataFrame**, with an option to save in `.parquet` format (CSV is avoided due to unsupported nested data types like arrays).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Purpose\n",
+    "These steps prepare the dataset for robust feature-based analysis and downstream ML/DL pipelines. The goal is to ensure that audio representations are:\n",
+    "\n",
+    "- Noise-free and consistent  \n",
+    "- Normalized across the dataset  \n",
+    "- Aligned in shape and scale  \n",
+    "- Ready for hypothesis testing, embedding, or classification\n"
    ]
   },
   {
@@ -432,6 +490,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Commented out so pipeline doesn't start accidentally\n",
+    "\n",
+    "__Will__ blow up computer "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -494,9 +561,6 @@
     }
    ],
    "source": [
-    "## Commented out so pipeline doesn't start accidentally\n",
-    "## Will blow up computer \n",
-    "\n",
     "# custom_clean_params = {\n",
     "#     'denoise': False,\n",
     "#     'remove_silence': False,\n",
@@ -518,6 +582,13 @@
     "# ])\n",
     "# with open(\"processed_data.pkl\", \"wb\") as f:\n",
     "#     pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load in data from cache"
    ]
   },
   {
