fixed small bugs in code and removed redundant logic

--- a/checkpoint2/checkpoint2.ipynb
+++ b/checkpoint2/checkpoint2.ipynb
@@ -160,15 +160,9 @@
     "    cleaned_path = os.path.join(output_dir, f\"{base_name}_cleaned.wav\")\n",
     "\n",
     "    sf.write(original_path, original_y, sr)\n",
-    "    sf.write(cleaned_path, cleaned_y, sr)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    sf.write(cleaned_path, cleaned_y, sr)\n",
+    "\n",
+    "\n",
     "def clean_audio(y: np.ndarray, \n",
     "                sr: int, \n",
     "                denoise: bool = True, \n",
@@ -231,9 +225,15 @@
     "    b, a = signal.butter(6, 80 / (sr/2), btype='high')\n",
     "    cleaned_audio = signal.filtfilt(b, a, cleaned_audio)\n",
     "\n",
-    "    return cleaned_audio\n",
-    "\n",
-    "\n",
+    "    return cleaned_audio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def load_audio_metadata(csv_path: str,\n",
     "                        audio_dir: str,\n",
     "                        limit: Union[int, None] = None,\n",
@@ -440,7 +440,7 @@
     "             limit: Union[int, None] = None,\n",
     "             clean_audio_params: dict = None,\n",
     "             save_comparisons: bool = False,\n",
-    "             save_path: str = \"processed_dataset.parquet\") -> pl.DataFrame:\n",
+    "             ) -> pl.DataFrame:\n",
     "    \"\"\"\n",
     "    Pipeline to run all preprocessing functions with timing and optional audio cleaning.\n",
     "    Only supports saving to .parquet (not CSV) to handle arrays properly.\n",
@@ -568,7 +568,6 @@
     }
    ],
    "source": [
-    "# Make sure to follow type hints or else down stream tasks get messed up \n",
     "custom_clean_params = {\n",
     "    'denoise': True,\n",
     "    'remove_silence': True,\n",
@@ -589,6 +588,7 @@
     "    pl.col(\"Audio\").map_elements(lambda y: np.array(y, dtype=np.float64).tolist(), return_dtype=pl.List(pl.Float64)),\n",
     "    pl.col(\"Spectrogram\").map_elements(lambda s: np.array(s, dtype=np.float64).tolist(), return_dtype=pl.List(pl.List(pl.Float64)))\n",
     "])\n",
+    "# saves df to a pkl file to be cached and used later\n",
     "with open(\"processed_data.pkl\", \"wb\") as f:\n",
     "    pickle.dump(df, f)"
    ]
@@ -1047,7 +1047,7 @@
    "source": [
     "def batch_pitch_extraction(audio_list: List,\n",
     "                           max_samples_per_batch: int=50,\n",
-    "                           sr: int=16000) -> List[float]:\n",
+    "                           sr: int=SAMPLE_RATE) -> List[float]:\n",
     "    # Randomly sample if batch is too large\n",
     "    if len(audio_list) > max_samples_per_batch:\n",
     "        sample_indices = np.random.choice(len(audio_list), max_samples_per_batch, replace=False)\n",
@@ -1055,27 +1055,22 @@
     "    \n",
     "    pitch_stds = []\n",
     "    for audio_array in audio_list:\n",
-    "        try:\n",
-    "            audio_array = np.asarray(audio_array, dtype=np.float64)\n",
-    "            \n",
-    "            # Extract pitch using PYIN\n",
-    "            f0, voiced_flag, _ = librosa.pyin(\n",
-    "                audio_array, \n",
-    "                fmin=librosa.note_to_hz('C2'),\n",
-    "                fmax=librosa.note_to_hz('C7'),\n",
-    "                sr=sr\n",
-    "            )\n",
-    "            \n",
-    "            # Filter for voiced segments\n",
-    "            f0_voiced = f0[voiced_flag]\n",
-    "            \n",
-    "            # Calculate pitch std, handle empty case\n",
-    "            pitch_std = float(np.std(f0_voiced)) if len(f0_voiced) > 0 else 0.0\n",
-    "            pitch_stds.append(pitch_std)\n",
+    "        audio_array = np.asarray(audio_array, dtype=np.float64)\n",
     "        \n",
-    "        except Exception as e:\n",
-    "            print(f\"Pitch extraction error: {e}\")\n",
-    "            pitch_stds.append(0.0)\n",
+    "        # Extract pitch using PYIN\n",
+    "        f0, voiced_flag, _ = librosa.pyin(\n",
+    "            audio_array, \n",
+    "            fmin=librosa.note_to_hz('C2'),\n",
+    "            fmax=librosa.note_to_hz('C7'),\n",
+    "            sr=sr\n",
+    "        )\n",
+    "        \n",
+    "        # Filter for voiced segments\n",
+    "        f0_voiced = f0[voiced_flag]\n",
+    "        \n",
+    "        # Calculate pitch std, handle empty case\n",
+    "        pitch_std = float(np.std(f0_voiced)) if len(f0_voiced) > 0 else 0.0\n",
+    "        pitch_stds.append(pitch_std)\n",
     "    \n",
     "    return pitch_stds\n",
     "\n",
@@ -1304,14 +1299,10 @@
     "    \n",
     "    mfcc_means = []\n",
     "    for audio_array in audio_list:\n",
-    "        try:\n",
-    "            audio_array = np.asarray(audio_array, dtype=np.float32)\n",
-    "            mfccs = librosa.feature.mfcc(y=audio_array, sr=sr, n_mfcc=n_coeffs)\n",
-    "            mfcc_mean = np.mean(mfccs, axis=1)\n",
-    "            mfcc_means.append(mfcc_mean)\n",
-    "        except Exception as e:\n",
-    "            print(f\"MFCC extraction error: {e}\")\n",
-    "            mfcc_means.append(np.zeros(n_coeffs))\n",
+    "        audio_array = np.asarray(audio_array, dtype=np.float32)\n",
+    "        mfccs = librosa.feature.mfcc(y=audio_array, sr=sr, n_mfcc=n_coeffs)\n",
+    "        mfcc_mean = np.mean(mfccs, axis=1)\n",
+    "        mfcc_means.append(mfcc_mean)\n",
     "    \n",
     "    return mfcc_means\n",
     "\n",
