updated website to have have synthetic data generation section

--- a/checkpoint3/machine_learning/synthetic_audio.ipynb
+++ b/checkpoint3/machine_learning/synthetic_audio.ipynb
@@ -9,8 +9,7 @@
     "import polars as pl\n",
     "import numpy as np\n",
     "import random\n",
-    "from typing import Dict, List, Optional, Tuple\n",
-    "from pathlib import Path\n",
+    "from typing import Dict, List\n",
     "import soundfile as sf\n",
     "import os"
    ]
