updated data gen code

--- a/checkpoint3/machine_learning/synthetic_audio.ipynb
+++ b/checkpoint3/machine_learning/synthetic_audio.ipynb
@@ -24,46 +24,40 @@
     "    df: pl.DataFrame,\n",
     "    target_count_per_label: int = 150,\n",
     "    output_path: str = \"balanced_audio_data.parquet\",\n",
-    "    save_samples: int = 0,  # Number of samples to save (0 = none)\n",
-    "    sample_rate: int = 44100,  # Default sample rate\n",
+    "    save_samples: int = 0,  \n",
+    "    sample_rate: int = 44100,  \n",
     "    output_dir: str = \"synthetic_samples\",\n",
-    "    batch_size: int = 50  # Process in batches to reduce memory usage\n",
+    "    batch_size: int = 50  \n",
     ") -> pl.DataFrame:\n",
     "    \"\"\"\n",
     "    Generate synthetic audio data to balance class distribution, using batch processing\n",
     "    to reduce memory consumption.\n",
     "    \"\"\"\n",
-    "    # Create output directory if it doesn't exist\n",
+    "\n",
     "    if save_samples > 0 and not os.path.exists(output_dir):\n",
     "        os.makedirs(output_dir)\n",
     "        print(f\"Created directory {output_dir} for synthetic audio samples\")\n",
     "    \n",
-    "    # Get label counts and determine how many samples to generate for each label\n",
     "    label_counts = df.group_by(\"Label\").agg(pl.count()).sort(\"count\")\n",
     "    print(f\"Original label distribution:\\n{label_counts}\")\n",
     "    \n",
-    "    # Create a dictionary for needed synthetic samples per label\n",
     "    synthetic_needs = {}\n",
     "    for label, count in zip(label_counts[\"Label\"], label_counts[\"count\"]):\n",
     "        if count < target_count_per_label:\n",
     "            synthetic_needs[label] = target_count_per_label - count\n",
     "    \n",
-    "    # No need to create label_to_examples for the entire dataset at once\n",
-    "    # We'll fetch examples for each label as needed\n",
     "    \n",
-    "    # First, create a copy of the original dataframe to avoid modification issues\n",
+    "    # create a copy of the original dataframe to avoid modification issues\n",
     "    combined_df = df.clone()\n",
     "    start_index = int(df[\"Index\"].max()) + 1\n",
     "    samples_saved = 0\n",
     "    \n",
-    "    # Process each label that needs synthetic data\n",
     "    for label, examples_needed in synthetic_needs.items():\n",
     "        print(f\"Generating {examples_needed} synthetic samples for label '{label}'\")\n",
     "        \n",
-    "        # Get source samples for this label\n",
     "        label_samples = df.filter(pl.col(\"Label\") == label)\n",
     "        \n",
-    "        # Process in batches to reduce memory usage\n",
+    "        # Process in batches \n",
     "        for batch_start in range(0, examples_needed, batch_size):\n",
     "            batch_end = min(batch_start + batch_size, examples_needed)\n",
     "            batch_size_actual = batch_end - batch_start\n",
@@ -87,7 +81,6 @@
     "                        filename = synthetic_sample[\"Filename\"]\n",
     "                        wav_path = os.path.join(output_dir, f\"sample_{samples_saved+1}_{filename}\")\n",
     "                        \n",
-    "                        # Save as WAV file\n",
     "                        try:\n",
     "                            sf.write(wav_path, audio_data, sample_rate)\n",
     "                            print(f\"Saved synthetic audio sample {samples_saved+1} to {wav_path}\")\n",
@@ -98,7 +91,7 @@
     "                except Exception as e:\n",
     "                    print(f\"Error generating synthetic sample for label '{label}': {e}\")\n",
     "            \n",
-    "            # Convert batch to dataframe and append to combined dataframe\n",
+    "            # Append to combined dataframe\n",
     "            if batch_rows:\n",
     "                try:\n",
     "                    batch_df = pl.DataFrame(batch_rows)\n",
@@ -118,15 +111,6 @@
     "                    # Append to combined dataframe\n",
     "                    combined_df = pl.concat([combined_df, batch_df])\n",
     "                    \n",
-    "                    # Periodically save intermediate results to reduce memory pressure\n",
-    "                    if batch_end % (batch_size * 3) == 0 or batch_end == examples_needed:\n",
-    "                        temp_output = f\"{output_path}.temp\"\n",
-    "                        combined_df.write_parquet(temp_output)\n",
-    "                        print(f\"Saved intermediate balanced dataset to {temp_output}\")\n",
-    "                        \n",
-    "                        # To reduce memory, we could optionally reload the data\n",
-    "                        # combined_df = pl.read_parquet(temp_output)\n",
-    "                    \n",
     "                except Exception as e:\n",
     "                    print(f\"Error processing batch: {e}\")\n",
     "                    if 'batch_df' in locals():\n",
@@ -136,7 +120,6 @@
     "    combined_df.write_parquet(output_path)\n",
     "    print(f\"Saved balanced dataset to {output_path}\")\n",
     "    \n",
-    "    # Show final distribution\n",
     "    new_label_counts = combined_df.group_by(\"Label\").agg(pl.count()).sort(\"count\")\n",
     "    print(f\"New label distribution:\\n{new_label_counts}\")\n",
     "    \n",
@@ -156,18 +139,15 @@
     "    num_samples_to_mix = random.randint(2, min(3, num_samples))\n",
     "    sample_indices = random.sample(range(num_samples), num_samples_to_mix)\n",
     "    \n",
-    "    # Get selected samples\n",
     "    selected_samples = [source_samples.row(i, named=True) for i in sample_indices]\n",
     "    first_sample = selected_samples[0]\n",
     "    \n",
-    "    # Find the audio column\n",
     "    audio_column = None\n",
     "    for col in [\"Audio\"]:\n",
     "        if col in first_sample:\n",
     "            audio_column = col\n",
     "            break\n",
     "    \n",
-    "    # Create new filename\n",
     "    filename = first_sample.get(\"Filename\", \"\")\n",
     "    if filename and \"_\" in filename:\n",
     "        participant_id = filename.split(\"_\")[0]\n",
@@ -176,7 +156,6 @@
     "    \n",
     "    new_filename = f\"{participant_id}_{label}_synthetic_{new_index}.wav\"\n",
     "    \n",
-    "    # Process audio data with memory efficiency in mind\n",
     "    audio_data = first_sample.get(audio_column, [])\n",
     "    if not isinstance(audio_data, list):\n",
     "        try:\n",
@@ -189,10 +168,9 @@
     "                          for sample in selected_samples \n",
     "                          if hasattr(sample.get(audio_column, []), '__len__'))\n",
     "    \n",
-    "    # Pre-allocate the synthetic audio array for better memory efficiency\n",
     "    synthetic_audio = np.zeros(min_audio_length, dtype=np.float32)\n",
     "    \n",
-    "    # Generate synthetic audio in chunks for memory efficiency\n",
+    "    # Generate synthetic audio in chunks \n",
     "    chunk_size = 1000  # Process audio in chunks to reduce memory usage\n",
     "    \n",
     "    for chunk_start in range(0, min_audio_length, chunk_size):\n",
@@ -216,21 +194,16 @@
     "                print(f\"Error processing audio at index {i}: {e}\")\n",
     "                synthetic_audio[i] = 0.0\n",
     "    \n",
-    "    # Convert back to list for polars compatibility\n",
     "    synthetic_audio = synthetic_audio.tolist()\n",
     "    \n",
-    "    # Get metadata from first sample\n",
     "    id_value = first_sample.get(\"ID\", participant_id)\n",
     "    \n",
-    "    # Calculate duration\n",
     "    duration_values = [float(sample.get(\"Duration\", 1.0)) for sample in selected_samples]\n",
     "    avg_duration = sum(duration_values) / len(duration_values) if duration_values else 1.0\n",
     "    new_duration = avg_duration * random.uniform(0.9, 1.1)\n",
     "    \n",
-    "    # Process spectrogram more efficiently\n",
     "    new_spectrogram = process_spectrogram_efficiently(selected_samples)\n",
     "    \n",
-    "    # Create result dictionary\n",
     "    result = {\n",
     "        \"Filename\": new_filename,\n",
     "        \"Audio\": synthetic_audio,\n",
@@ -241,7 +214,6 @@
     "        \"Spectrogram\": new_spectrogram\n",
     "    }\n",
     "    \n",
-    "    # Ensure audio column is set\n",
     "    result[audio_column] = synthetic_audio\n",
     "    \n",
     "    return result\n",
@@ -272,10 +244,8 @@
     "        # Default if no valid row found\n",
     "        first_row_len = 10 if base_spectrogram and len(base_spectrogram) > 0 else 10\n",
     "    \n",
-    "    # Pre-allocate spectrogram\n",
     "    new_spectrogram = []\n",
     "    \n",
-    "    # Process row by row\n",
     "    for row_idx in range(spec_height):\n",
     "        available_rows = []\n",
     "        for sample in selected_samples:\n",
@@ -294,7 +264,6 @@
     "            # Find minimum column length to avoid index errors\n",
     "            max_col = min(len(row) for row in available_rows if row)\n",
     "            \n",
-    "            # Create new row\n",
     "            new_row = []\n",
     "            for col_idx in range(max_col):\n",
     "                try:\n",
@@ -326,11 +295,9 @@
     "    Load audio data and balance the dataset using memory-efficient batched processing.\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        # Load the data\n",
     "        print(f\"Loading data from {input_path}\")\n",
     "        df = pl.read_parquet(input_path)\n",
     "        \n",
-    "        # Print column names and sample data for debugging\n",
     "        print(f\"Available columns: {df.columns}\")\n",
     "        print(f\"Number of rows: {len(df)}\")\n",
     "        \n",
