--- a/checkpoint3/machine_learning/attention.ipynb
+++ b/checkpoint3/machine_learning/attention.ipynb
@@ -111,7 +111,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv-311",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
