updated formating for website plots

--- a/checkpoint2/checkpoint2.ipynb
+++ b/checkpoint2/checkpoint2.ipynb
@@ -774,11 +774,20 @@
     "        xaxis_title='Label',\n",
     "        yaxis_title='Count',\n",
     "        xaxis_tickangle=70,\n",
-    "        margin=dict(l=40, r=40, t=60, b=100),\n",
     "        plot_bgcolor='white',\n",
     "        autosize=False,\n",
-    "        width=400,    \n",
-    "        height=400,\n",
+    "        margin=dict(l=40, r=40, t=60, b=100),  # More right margin\n",
+    "        legend=dict(\n",
+    "            orientation=\"v\",\n",
+    "            yanchor=\"top\",\n",
+    "            y=1,\n",
+    "            xanchor=\"left\",\n",
+    "            x=1,  # Push legend further right outside the plot\n",
+    "            font=dict(size=12),\n",
+    "            itemwidth=40,  # Force horizontal space per legend item\n",
+    "        ),\n",
+    "        width=400,  \n",
+    "        height=400, \n",
     "    )\n",
     "\n",
     "    # Save each plot as HTML\n",
