--- a/checkpoint3/machine_learning/classifiers.ipynb
+++ b/checkpoint3/machine_learning/classifiers.ipynb
@@ -22,7 +22,16 @@
    "execution_count": 1,
    "id": "5c711e6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/visheshnarayan/Documents/Code/School/CMSC320/cmsc320-final/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import polars as pl\n",
     "import pandas as pd\n",
@@ -45,6 +54,7 @@
     "import umap\n",
     "import os\n",
     "import warnings\n",
+    "import pickle\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -58,32 +68,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset shape: (8102, 7)\n",
-      "Columns: ['Filename', 'Audio', 'ID', 'Label', 'Duration', 'Index', 'Spectrogram']\n",
+      "Dataset shape: (7077, 13)\n",
+      "Columns: ['Filename', 'Audio', 'ID', 'Label', 'Duration', 'Index', 'Spectrogram', 'Spectral Entropy', 'Audio Length', 'PitchVar', 'MFCC-1', 'MFCC-2', 'MFCC-3']\n",
       "Label distribution:\n",
       "shape: (22, 2)\n",
-      "┌────────────────────┬───────┐\n",
-      "│ Label              ┆ count │\n",
-      "│ ---                ┆ ---   │\n",
-      "│ str                ┆ u32   │\n",
-      "╞════════════════════╪═══════╡\n",
-      "│ selftalk           ┆ 1885  │\n",
-      "│ frustrated         ┆ 1536  │\n",
-      "│ delighted          ┆ 1272  │\n",
-      "│ dysregulated       ┆ 704   │\n",
-      "│ social             ┆ 634   │\n",
-      "│ …                  ┆ …     │\n",
-      "│ tablet             ┆ 100   │\n",
-      "│ no                 ┆ 100   │\n",
-      "│ laugh              ┆ 100   │\n",
-      "│ more               ┆ 100   │\n",
-      "│ dysregulation-sick ┆ 100   │\n",
-      "└────────────────────┴───────┘\n"
+      "┌──────────────┬───────┐\n",
+      "│ Label        ┆ count │\n",
+      "│ ---          ┆ ---   │\n",
+      "│ str          ┆ u32   │\n",
+      "╞══════════════╪═══════╡\n",
+      "│ selftalk     ┆ 1885  │\n",
+      "│ frustrated   ┆ 1536  │\n",
+      "│ delighted    ┆ 1272  │\n",
+      "│ dysregulated ┆ 704   │\n",
+      "│ social       ┆ 634   │\n",
+      "│ …            ┆ …     │\n",
+      "│ laugh        ┆ 8     │\n",
+      "│ glee         ┆ 8     │\n",
+      "│ tablet       ┆ 7     │\n",
+      "│ hunger       ┆ 4     │\n",
+      "│ greeting     ┆ 3     │\n",
+      "└──────────────┴───────┘\n"
      ]
     }
    ],
    "source": [
-    "df = pl.read_parquet(\"balanced_audio_data.parquet\")\n",
+    "with open(\"/Users/visheshnarayan/Documents/Code/School/CMSC320/cmsc320-final/checkpoint2/processed_data.pkl\", \"rb\") as f:\n",
+    "    df = pickle.load(f)\n",
+    "\n",
+    "# df = pickle.load(\"/Users/visheshnarayan/Documents/Code/School/CMSC320/cmsc320-final/checkpoint2/processed_data.pkl\")\n",
     "\n",
     "print(f\"Dataset shape: {df.shape}\")\n",
     "print(f\"Columns: {df.columns}\")\n",
@@ -166,13 +179,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted spectrograms: 8102\n",
-      "Extracted audio data: 8102\n",
-      "Extracted labels: 8102\n",
-      "Extracting features.\n",
-      "Extracted MFCC shape: (8102, 13)\n",
-      "Extracted audio stats shape: (8102, 6)\n",
-      "Feature vector shape: (8102, 19)\n",
+      "Extracted spectrograms: 7077\n",
+      "Extracted audio data: 7077\n",
+      "Extracted labels: 7077\n",
+      "Extracting features.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted MFCC shape: (7077, 13)\n",
+      "Extracted audio stats shape: (7077, 6)\n",
+      "Feature vector shape: (7077, 19)\n",
       "Scaling features now.\n"
      ]
     }
@@ -1577,7 +1596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
