fixed plots for clustering in website

--- a/checkpoint3/machine_learning/classifiers.ipynb
+++ b/checkpoint3/machine_learning/classifiers.ipynb
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "4f1fa8c1",
    "metadata": {},
    "outputs": [
@@ -90458,10 +90458,10 @@
     "print(f\"Applying K-means clustering with {n_clusters} clusters...\")\n",
     "\n",
     "# For 2D\n",
-    "# clustering_results_2d = {}\n",
-    "# for name, projection in projections.items():\n",
-    "#     print(f\"\\nClustering on 2D {name} projection:\")\n",
-    "#     clustering_results_2d[name] = apply_kmeans_clustering(projection, labels, name, n_clusters)\n",
+    "clustering_results_2d = {}\n",
+    "for name, projection in projections.items():\n",
+    "    print(f\"\\nClustering on 2D {name} projection:\")\n",
+    "    clustering_results_2d[name] = apply_kmeans_clustering(projection, labels, name, n_clusters)\n",
     "\n",
     "# For 3D\n",
     "clustering_results_3d = {}\n",
